# ReguLake

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/chunks/: 32014L0065_EN.json  32016R0679_EN.json
data/evaluation/: golden_dataset.json
data/evaluation/results/: eval_results.csv
scripts/: check_index.py  debug_api_path.py  evaluate.py  ingest.py  ingest_azure.py  inspect_index.py  test_retrieval.py
src/gtgh_team3_compliance_assistant/: config.py  main.py  main_databricks.py
src/gtgh_team3_compliance_assistant/api/: health.py  ingestion.py  query.py  query_databricks.py  run.py
src/gtgh_team3_compliance_assistant/databricks/: bronze.py  embeddings.py  gold.py  paths.py  pipeline.py  setup_tables.py  silver_chunks.py  silver_extract.py  spark_session.py
src/gtgh_team3_compliance_assistant/embedding/: CloudEmbedder.py  EmbedderFactory.py  LocalEmbedder.py  run.py
src/gtgh_team3_compliance_assistant/frontend/: index.html  index_databricks.html
src/gtgh_team3_compliance_assistant/ingestion/: downloader.py  eurlex_client.py  metadata_storing.py  run.py
src/gtgh_team3_compliance_assistant/logger/: Logger.py
src/gtgh_team3_compliance_assistant/model_communication/: llm.py
src/gtgh_team3_compliance_assistant/models/: chunks.py  document.py  downloader.py  search.py
src/gtgh_team3_compliance_assistant/pipeline/: rag_pipeline.py
src/gtgh_team3_compliance_assistant/processing/: chunk_storing.py  eur_chunker.py  text_extractor.py  text_storing.py
tests/: test_embedder.py  test_storage.py
(+6 files in other folders)
